--- a/deeper-lore-index/dplore-index.html
+++ b/deeper-lore-index/dplore-index.html
@@ -109,7 +109,7 @@
             <br>
               It is the origin of possibility.</p>
 
-              <p><a href="/creation.html" target="_blank">Enter the story of Ashes of Divinity →</a></p>
+              <p><a href="/creation/creation.html" target="_blank">Enter the story of Ashes of Divinity →</a></p>
 
             </div>
           </div>
@@ -153,7 +153,7 @@
 
               <p>In this section, each age is laid bare: its triumphs, its tragedies, and the truths it buried along the way. Together, they form the backbone of the world the players now walk—one built on broken thrones, lost names, and unquiet memories.</p>
 
-              <p><a href="/history.html" target="_blank">Begin the Chronicle of Ages →</a></p>
+              <p><a href="/history/history.html" target="_blank">Begin the Chronicle of Ages →</a></p>
 
             </div>
           </div>
@@ -184,7 +184,7 @@
 
               <p>This is not just the memory of war.<br>It is the shape of the world it left behind.</p>
 
-              <p><a href="/wars-index.html" target="_blank">Read the Book of Broken Blades →</a></p>
+              <p><a href="/wars/wars-index.html" target="_blank">Read the Book of Broken Blades →</a></p>
 
             </div>
           </div>
