--- a/deeper-lore-index/wars/wars-index.html
+++ b/deeper-lore-index/wars/wars-index.html
@@ -47,7 +47,7 @@
 
             <p>And though creation brought wonder, it also left shadows in its wake. Not all things born from that first breath were meant to be understood. Somewhere, nestled deep within the folds of what came to be, something was hidden. A secret, still pulsing in the quiet places of the world.</p>
 
-            <p><a href="/ember-wars.html" target="_blank">Their bones are dust, but their stories remain →</a></p>
+            <p><a href="/ember-desert/ember-wars.html" target="_blank">Their bones are dust, but their stories remain →</a></p>
 
           </div>
         </div>
@@ -78,7 +78,7 @@
 
             <p>Yet beneath the surface, nothing is ever still. The haunted wrecks remain. Ghost ships still drift where the trenches run deepest. And some say the wave that ended the war wasn’t punishment… but a warning.</p>
 
-            <p><a href="/empire-wars.html" target="_blank">Beneath the wave, the truth still stirs →</a></p>
+            <p><a href="/empire-of-tides/empire-wars.html" target="_blank">Beneath the wave, the truth still stirs →</a></p>
 
           </div>
         </div>
@@ -111,7 +111,7 @@
 
             <p>But the scars still shine, in both wood and sky.</p>
 
-            <p><a href="/ironwood-wars.html" target="_blank">Read the spell that shattered worlds.. and the fire that followed →</a></p>
+            <p><a href="/ironwood/ironwood-wars.html" target="_blank">Read the spell that shattered worlds.. and the fire that followed →</a></p>
 
           </div>
         </div>
@@ -144,7 +144,7 @@
 
             <p>And no one knows if it will ever turn again.</p>
 
-            <p><a href="/twilight-wars.html" target="_blank">Where twilight reigns, the story remains →</a></p>
+            <p><a href="/twilight-isles/twilight-wars.html" target="_blank">Where twilight reigns, the story remains →</a></p>
 
           </div>
         </div>
